# self-loop-eval

./: .gitignore  README.md  pyproject.toml
self_loop_eval/: __init__.py  cli.py  config.py
self_loop_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
self_loop_eval/environments/: __init__.py  base.py  coding.py  real_world_problems.py
self_loop_eval/eval_loop/: __init__.py  aha_cycle.py  convergence.py  loop.py  round_state.py
self_loop_eval/metrics/: __init__.py  tracker.py
self_loop_eval/models/: __init__.py  base.py  prompts.py  student.py  teacher.py
self_loop_eval/rl/: __init__.py  rewards.py  trainer.py
self_loop_eval/training/: __init__.py  data_collector.py  lora_trainer.py  scheduler.py  sft_formatter.py
tests/: test_aha_cycle.py  test_environments.py  test_local_models.py
